# appconsole

./: CHANGELOG.md  CMakeLists.txt  README.md
include/appconsole/: console.h  lib.h
lib/: CMakeLists.txt
lib/appconsole/: CMakeLists.txt  console.cpp  lib.cpp
